--- a/gyrodeo/android/local.properties
+++ b/gyrodeo/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=C:\\Users\\Viral\\AppData\\Local\\Android\\sdk
-flutter.sdk=D:\\flutter
+sdk.dir=C:\\Users\\HP\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\HP\\flutter_windows_1.22.5-stable\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
